crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__memory_list_empty__json.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
[]
--- stderr ---
